--- a/Task-4-Solution/jenkins/Jenkinsfile
+++ b/Task-4-Solution/jenkins/Jenkinsfile
@@ -56,9 +56,9 @@ pipeline {
             steps {
                 echo 'Building App Dev Images'
                 sh """
-                    docker build --force-rm -t "${IMAGE_TAG_FE}" "${WORKSPACE}/bluerentalcars-frontend"
-                    docker build --force-rm -t "${IMAGE_TAG_BE}" "${WORKSPACE}/bluerentalcars-backend"
-                    docker build --force-rm -t "${IMAGE_TAG_DB}" "${WORKSPACE}/postgresql"
+                    docker build --force-rm -t "${IMAGE_TAG_FE}" "${WORKSPACE}/Task-4-Solution/bluerentalcars-frontend"
+                    docker build --force-rm -t "${IMAGE_TAG_BE}" "${WORKSPACE}/Task-4-Solution/bluerentalcars-backend"
+                    docker build --force-rm -t "${IMAGE_TAG_DB}" "${WORKSPACE}/Task-4-Solution/postgresql"
                     docker image ls
                 """
             }
