--- a/Task-5-Solution/jenkins/Jenkinsfile
+++ b/Task-5-Solution/jenkins/Jenkinsfile
@@ -23,8 +23,8 @@ pipeline {
             steps {
                 echo 'Building App Dev Images'
                 sh """
-                    docker build --force-rm -t "${IMAGE_TAG_FE}" "${WORKSPACE}/bluerentalcars-frontend"
-                    docker build --force-rm -t "${IMAGE_TAG_BE}" "${WORKSPACE}/bluerentalcars-backend"
+                    docker build --force-rm -t "${IMAGE_TAG_FE}" "${WORKSPACE}/Task-5-Solution/bluerentalcars-frontend"
+                    docker build --force-rm -t "${IMAGE_TAG_BE}" "${WORKSPACE}/Task-5-Solution/bluerentalcars-backend"
                     docker build --force-rm -t "${IMAGE_TAG_DB}" "${WORKSPACE}/postgresql"
                     docker image ls
                 """
